--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -25,6 +25,8 @@ jobs:
         cd yamdb_final/api_yamdb/
         # запустить написанные разработчиком тесты
         python manage.py test
+        cd ..
+        pytest
   # Сразу после них добавьте новую задачу: деплой приложения
   build_and_push_to_docker_hub:
       name: Push Docker image to Docker Hub
