--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -41,7 +41,7 @@ jobs:
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1 
           with:
-            context: ./spi_yamdb
+            context: ./api_yamdb
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_PASSWORD }}
         - name: Push to Docker Hub
