--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -40,10 +40,10 @@ jobs:
         - name: Login to Docker 
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1 
-          context: ./api_yamdb
           with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb_web:latest
+          context: api_yamdb
         - name: Push to Docker Hub
           # Пуш образа в Docker Hub
           uses: docker/build-push-action@v2 
