--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -41,15 +41,14 @@ jobs:
           # Запуск скрипта авторизации на Docker Hub
           uses: docker/login-action@v1 
           with:
-            push: true
-            tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb_web:latest
-            context: api_yamdb
-        - name: Push to Docker Hub
-          # Пуш образа в Docker Hub
-          uses: docker/build-push-action@v2 
-          with:
-            push: true
-            tags: proforg77/yamdb_final:latest 
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+          context: api_yamdb 
   deploy:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
