--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -21,8 +21,8 @@ jobs:
         pip install -r requirements.txt
     - name: Test with flake8 and django tests
       run: |
+        isort .
         python -m flake8
-        # перейти в папку, содержащую manage.py —
         pytest
 
   build_and_push_to_docker_hub:
@@ -57,9 +57,19 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            sudo docker pull proforg77/yamdb_final:latest
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 proforg77/yamdb_final:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d
+            sudo docker-compose exec -T web python manage.py migrate --noinput
+            sudo docker-compose exec -T web python manage.py collectstatic --noinput
   send_message:
       runs-on: ubuntu-latest
       needs: deploy
