--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -21,36 +21,30 @@ jobs:
         pip install -r requirements.txt
     - name: Test with flake8 and django tests
       run: |
+        isort .
         python -m flake8
-        # перейти в папку, содержащую manage.py —
-        cd api_yamdb/
-        python manage.py test
-        cd ..
         pytest
-  # Сразу после них добавьте новую задачу: деплой приложения
+
   build_and_push_to_docker_hub:
-      name: Push Docker image to Docker Hub
-      runs-on: ubuntu-latest
-      needs: tests
-      steps:
-        - name: Check out the repo
-          # Проверка доступности репозитория Docker Hub для workflow
-          uses: actions/checkout@v2 
-        - name: Set up Docker Buildx
-          # Вызов сборщика контейнеров docker
-          uses: docker/setup-buildx-action@v1 
-        - name: Login to Docker 
-          # Запуск скрипта авторизации на Docker Hub
-          uses: docker/login-action@v1 
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-        - name: Push to Docker Hub
-          # Пуш образа в Docker Hub
-          uses: docker/build-push-action@v2 
-          with:
-            push: true
-            tags: proforg77/yamdb_final:latest 
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1 
+      - name: Login to Docker 
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+          context: api_yamdb 
   deploy:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
@@ -61,13 +55,21 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            # Выполняет pull образа с DockerHub
-            sudo docker pull proforg77/yamdb_final:latest
-            #остановка всех контейнеров
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 proforg77/yamdb_final:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+            sudo docker-compose stop
+            sudo docker-compose rm web
+            touch .env
+            echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+            echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            sudo docker-compose up -d
+            sudo docker-compose exec -T web python manage.py migrate --noinput
+            sudo docker-compose exec -T web python manage.py collectstatic --noinput
   send_message:
       runs-on: ubuntu-latest
       needs: deploy
