--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,8 +9,8 @@ services:
     env_file:
       - ./.env
   web:
-    build: ../api_yamdb
     image: proforg77/yamdb_final:latest
+    restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
