--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -29,6 +29,7 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2 
@@ -48,6 +49,7 @@ jobs:
   deploy:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
+      if: github.ref == 'refs/heads/master'
       steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -68,8 +70,7 @@ jobs:
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
             sudo docker-compose up -d
-            sudo docker-compose exec -T web python manage.py migrate --noinput
-            sudo docker-compose exec -T web python manage.py collectstatic --noinput
+
   send_message:
       runs-on: ubuntu-latest
       needs: deploy
