--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
 
+    server_tokens off;
+    
     server_name 130.193.43.169;
-
-    server_tokens_off;
 
     location /static/ {
         root /var/html/;
